<resources>
    <string name="app_name">Chunkoid</string>
    <string name="initializing">Initializing...</string>
    <string name="initializing_copying">Initializing: Copying necessary files %1$d%%</string>
    <string name="initializing_failed">Initialization failed. Would you like to retry?</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="output_folder_not_found">Output folder not found</string>
    <string name="cannot_open_folder">Cannot open output folder</string>
    <string name="about">About</string>
    <string name="app_version">1.2.0 Release</string>
    <string name="about_intro">A Minecraft Java-Bedrock world converter for Android devices. This unique application supports version downgrade and upgrade functionality, offering a convenient conversion environment for mobile users.</string>
    <string name="about_credits_chunker">Chunker-Cli is an open-source project (MIT) for Hive Game</string>
    <string name="about_credits_nbt">The NBT tool uses Polyana-Fontes NBT-Manipulator (MIT)</string>
    <string name="about_credits_sdk">The archive decryptor uses Dicecan NetEaseDecryptorSDK (GPL v3)</string>
    <string name="about_thanks">Special Thanks: Ryan Steven</string>
    <string name="about_website">Click to visit website</string>
    <string name="about_date">2026/7/5</string>
    <string name="check_update">Check for Updates</string>
    <string name="donate">Donate</string>
    <string name="start_conversion">Start Conversion</string>
    <string name="nav_desc">Converter Kit</string>
    <string name="settings">Settings</string>
    <string name="built_in_terminal">Console</string>
    <string name="converter">Converter</string>
    <string name="output_manager">Output Manager</string>
    <string name="nbt_editor">NBT Edit Kit</string>
    <string name="resource_converter">Resource Pack Converter</string>
    <string name="archive_decrypt">Archive Decrypt</string>
    <string name="about_docs">Help Docs</string>
    <string name="feature_not_available">Feature not yet available, coming soon!</string>
    <string name="archive">Archive Format</string>
    <string name="folder">Folder Directory</string>
    <string name="extracting_world">Extracting world...</string>
    <string name="delete_task">Delete this task</string>
    <string name="bedrock_edition">Bedrock Edition</string>
    <string name="java_edition">Java Edition</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="select_target_format">Select target format</string>
    <string name="convert_to">Convert to</string>
    <string name="java_subtitle_1_8">Colorful World</string>
    <string name="java_subtitle_1_9">Combat Update</string>
    <string name="java_subtitle_1_10">Frost &amp; Fire</string>
    <string name="java_subtitle_1_11">Exploration</string>
    <string name="java_subtitle_1_12">Colorful World</string>
    <string name="java_subtitle_1_13">Aquatic Update</string>
    <string name="java_subtitle_1_14">Village &amp; Pillage</string>
    <string name="java_subtitle_1_15">Bee Update</string>
    <string name="java_subtitle_1_16">Nether Update</string>
    <string name="java_subtitle_1_17">Caves &amp; Cliffs I</string>
    <string name="java_subtitle_1_18">Caves &amp; Cliffs II</string>
    <string name="java_subtitle_1_19">Wild Update</string>
    <string name="java_subtitle_1_20">Trails &amp; Tales</string>
    <string name="java_subtitle_1_21"> Tricky Trials</string>
    <string name="java_subtitle_26">Future Updates</string>
    <string name="bedrock_subtitle_1_12">Aquatic Sync</string>
    <string name="bedrock_subtitle_1_13">Coral Update</string>
    <string name="bedrock_subtitle_1_14">Village &amp; Pillage</string>
    <string name="bedrock_subtitle_1_16">Nether Update</string>
    <string name="bedrock_subtitle_1_17">Caves &amp; Cliffs I</string>
    <string name="bedrock_subtitle_1_18">Caves &amp; Cliffs II</string>
    <string name="bedrock_subtitle_1_19">Wild Update</string>
    <string name="bedrock_subtitle_1_20">Trails &amp; Tales</string>
    <string name="bedrock_subtitle_1_21"> Tricky Trials</string>
    <string name="bedrock_subtitle_1_26">Future Updates</string>
    <string name="java_1_8_8">1.8.8</string>
    <string name="java_1_9">1.9</string>
    <string name="java_1_9_1">1.9.1</string>
    <string name="java_1_9_2">1.9.2</string>
    <string name="java_1_9_3">1.9.3</string>
    <string name="java_1_10">1.10</string>
    <string name="java_1_10_1">1.10.1</string>
    <string name="java_1_10_2">1.10.2</string>
    <string name="java_1_11">1.11</string>
    <string name="java_1_11_1">1.11.1</string>
    <string name="java_1_11_2">1.11.2</string>
    <string name="java_1_12">1.12</string>
    <string name="java_1_12_1">1.12.1</string>
    <string name="java_1_12_2">1.12.2</string>
    <string name="java_1_13">1.13</string>
    <string name="java_1_13_1">1.13.1</string>
    <string name="java_1_13_2">1.13.2</string>
    <string name="java_1_14">1.14</string>
    <string name="java_1_14_1">1.14.1</string>
    <string name="java_1_14_2">1.14.2</string>
    <string name="java_1_14_3">1.14.3</string>
    <string name="java_1_14_4">1.14.4</string>
    <string name="java_1_15">1.15</string>
    <string name="java_1_15_1">1.15.1</string>
    <string name="java_1_15_2">1.15.2</string>
    <string name="java_1_16">1.16</string>
    <string name="java_1_16_1">1.16.1</string>
    <string name="java_1_16_2">1.16.2</string>
    <string name="java_1_16_3">1.16.3</string>
    <string name="java_1_16_4">1.16.4</string>
    <string name="java_1_16_5">1.16.5</string>
    <string name="java_1_17">1.17</string>
    <string name="java_1_17_1">1.17.1</string>
    <string name="java_1_18">1.18</string>
    <string name="java_1_18_1">1.18.1</string>
    <string name="java_1_18_2">1.18.2</string>
    <string name="java_1_19">1.19</string>
    <string name="java_1_19_1">1.19.1</string>
    <string name="java_1_19_2">1.19.2</string>
    <string name="java_1_19_3">1.19.3</string>
    <string name="java_1_19_4">1.19.4</string>
    <string name="java_1_20">1.20</string>
    <string name="java_1_20_1">1.20.1</string>
    <string name="java_1_20_2">1.20.2</string>
    <string name="java_1_20_3">1.20.3</string>
    <string name="java_1_20_4">1.20.4</string>
    <string name="java_1_20_5">1.20.5</string>
    <string name="java_1_20_6">1.20.6</string>
    <string name="java_1_21">1.21</string>
    <string name="java_1_21_1">1.21.1</string>
    <string name="java_1_21_2">1.21.2</string>
    <string name="java_1_21_3">1.21.3</string>
    <string name="java_1_21_4">1.21.4</string>
    <string name="java_1_21_5">1.21.5</string>
    <string name="java_1_21_6">1.21.6</string>
    <string name="java_1_21_7">1.21.7</string>
    <string name="java_1_21_8">1.21.8</string>
    <string name="java_1_21_9">1.21.9</string>
    <string name="java_1_21_10">1.21.10</string>
    <string name="java_1_21_11">1.21.11</string>
    <string name="java_26_1">26.1</string>
    <string name="java_26_2">26.2</string>
    <string name="bedrock_1_12">1.12</string>
    <string name="bedrock_1_13">1.13</string>
    <string name="bedrock_1_14">1.14</string>
    <string name="bedrock_1_14_1">1.14.1</string>
    <string name="bedrock_1_14_20">1.14.20</string>
    <string name="bedrock_1_14_30">1.14.30</string>
    <string name="bedrock_1_14_60">1.14.60</string>
    <string name="bedrock_1_16">1.16</string>
    <string name="bedrock_1_16_20">1.16.20</string>
    <string name="bedrock_1_16_100">1.16.100</string>
    <string name="bedrock_1_16_200">1.16.200</string>
    <string name="bedrock_1_16_210">1.16.210</string>
    <string name="bedrock_1_16_220">1.16.220</string>
    <string name="bedrock_1_17">1.17</string>
    <string name="bedrock_1_17_10">1.17.10</string>
    <string name="bedrock_1_17_20">1.17.20</string>
    <string name="bedrock_1_17_30">1.17.30</string>
    <string name="bedrock_1_17_40">1.17.40</string>
    <string name="bedrock_1_18">1.18</string>
    <string name="bedrock_1_18_10">1.18.10</string>
    <string name="bedrock_1_18_20">1.18.20</string>
    <string name="bedrock_1_18_30">1.18.30</string>
    <string name="bedrock_1_19">1.19</string>
    <string name="bedrock_1_19_10">1.19.10</string>
    <string name="bedrock_1_19_20">1.19.20</string>
    <string name="bedrock_1_19_30">1.19.30</string>
    <string name="bedrock_1_19_40">1.19.40</string>
    <string name="bedrock_1_19_50">1.19.50</string>
    <string name="bedrock_1_19_60">1.19.60</string>
    <string name="bedrock_1_19_70">1.19.70</string>
    <string name="bedrock_1_19_80">1.19.80</string>
    <string name="bedrock_1_20">1.20</string>
    <string name="bedrock_1_20_10">1.20.10</string>
    <string name="bedrock_1_20_20">1.20.20</string>
    <string name="bedrock_1_20_30">1.20.30</string>
    <string name="bedrock_1_20_40">1.20.40</string>
    <string name="bedrock_1_20_50">1.20.50</string>
    <string name="bedrock_1_20_60">1.20.60</string>
    <string name="bedrock_1_20_70">1.20.70</string>
    <string name="bedrock_1_20_80">1.20.80</string>
    <string name="bedrock_1_21">1.21</string>
    <string name="bedrock_1_21_20">1.21.20</string>
    <string name="bedrock_1_21_30">1.21.30</string>
    <string name="bedrock_1_21_40">1.21.40</string>
    <string name="bedrock_1_21_50">1.21.50</string>
    <string name="bedrock_1_21_60">1.21.60</string>
    <string name="bedrock_1_21_70">1.21.70</string>
    <string name="bedrock_1_21_80">1.21.80</string>
    <string name="bedrock_1_21_90">1.21.90</string>
    <string name="bedrock_1_21_100">1.21.100</string>
    <string name="bedrock_1_21_110">1.21.110</string>
    <string name="bedrock_1_21_120">1.21.120</string>
    <string name="bedrock_1_21_130">1.21.130</string>
    <string name="bedrock_1_26">1.26</string>
    <string name="bedrock_1_26_10">1.26.10</string>
    <string name="bedrock_1_26_20">1.26.20</string>
    <string name="bedrock_1_26_30">1.26.30</string>
    <string name="conversion_title">Converting World</string>
    <string name="conversion_progress">Conversion Progress</string>
    <string name="converting">Converting...</string>
    <string name="conversion_complete">Conversion Complete!</string>
    <string name="conversion_failed">Conversion Failed</string>
    <string name="cancel_conversion">Cancel</string>
    <string name="view_logs">View Logs</string>
    <string name="open_output">Open Output Folder</string>
    <string name="settings_title">Settings</string>
    <string name="conversion_settings">Converter Settings</string>
    <string name="jvm_max_memory">JVM Maximum Memory (MB)</string>
    <string name="memory_hint">For large worlds (over 1GB), increase memory for better performance. Too little memory may cause errors.</string>
    <string name="keep_original_nbt">Keep Original NBT</string>
    <string name="keep_original_nbt_desc">Preserve original world data, recommended only when converting between same versions</string>
    <string name="general_settings">General</string>
    <string name="log_output">Log Output</string>
    <string name="start_game">Start Game</string>
    <string name="no_worlds_found">Try to converse a world</string>
    <string name="decryptor_title">Archive Decryptor</string>
    <string name="decrypt_shortcut_short">Archive Decrypt</string>
    <string name="decrypt_shortcut_long">Archive Decrypt</string>
    <string name="decryptor_desc">Netease edition saves are restricted by the platform and need to be decrypted before they can be converted. This is a decrypter that can quickly handle these kinds of saves.</string>
    <string name="select_decrypt_world">Select input archive folder</string>
    <string name="ready_to_decrypt">Ready to decrypt</string>
    <string name="export_decrypted_world">Save</string>
    <string name="pack_converter_shortcut_short">Pack Converter</string>
    <string name="pack_converter_shortcut_long">Pack Converter</string>
</resources>