<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="decrypt"
        android:enabled="true"
        android:icon="@drawable/key"
        android:shortcutShortLabel="@string/decrypt_shortcut_short"
        android:shortcutLongLabel="@string/decrypt_shortcut_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.dozenesstudio.chunkoid"
            android:targetClass="com.dozenesstudio.chunkoid.DecryptActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="pack_converter"
        android:enabled="true"
        android:icon="@drawable/texture"
        android:shortcutShortLabel="@string/pack_converter_shortcut_short"
        android:shortcutLongLabel="@string/pack_converter_shortcut_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.dozenesstudio.chunkoid"
            android:targetClass="com.dozenesstudio.chunkoid.PackConverterActivity" />
    </shortcut>
</shortcuts>